<resources>
    <string name="app_name">PocketEos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_text">资产</string>
    <string name="friends_text">富豪榜</string>
    <string name="news_text">新闻</string>
    <string name="application_text">应用</string>
    <string name="all_money">总资产(¥)</string>
    <string name="switch_number">切换账号</string>
    <string name="no_data">没有数据</string>
    <string name="hint">滑动销毁钱包</string>
    <string name="wallect_intro">1.请务必备份好自己的钱包，或单分别导出账号（明文）妥善保管 \n2.账号私钥将被加密保管在手机里 \n3.选择保护隐私，别人将无法通过钱包名称查到此账号 \n4.当更换手机时，请务必销毁钱包</string>
    <string name="_35">+35%</string>
    <string name="_120_100">≈120,100</string>
    <string name="make_collections">发起收款</string>
    <string name="red_packet">发送红包</string>
    <string name="transfer_accounts">发起转账</string>
    <string name="no_more">- 没有更多 -</string>
    <string name="seach_friend">搜索好友</string>
    <string name="choose_type_title">按资产筛选</string>
    <string name="hot_application">本周明星应用</string>
    <string name="hot_application_desc">企业应用简介</string>
    <string name="bussiness_application">企业应用</string>
    <string name="_120">￥120</string>
    <string name="cny">CNY</string>
    <string name="_2_06">+2.06%(今日)</string>
    <string name="_24h_3_509_012_cny">额(24h)3,509,012 CNY</string>
    <string name="vip230656469">VIP230656469</string>
    <string name="_120_000">120,000</string>
    <string name="recycle_coin_history">交易记录</string>
    <string name="pocket_eos">Pocket EOS</string>
    <string name="transfer_account_to_him">转账给他</string>
    <string name="wallet_management"> \n钱包管理</string>
    <string name="transaction_history"> \n交易记录</string>
    <string name="candy_integral">PE糖果</string>
    <string name="message_center">消息中心</string>
    <string name="suggestion_feedback">意见反馈</string>
    <string name="num_limit">您已超过字数限制</string>
    <string name="system_settings">系统设置</string>
    <string name="app_update">版本更新</string>
    <string name="get_makecollections">资产收款</string>
    <string name="all_number">全部账号</string>
    <string name="all_property">全部资产</string>
    <string name="get_property_number">资产数量</string>
    <string name="input_property_number">填写数额</string>
    <string name="get_make_collections_code">生成收款二维码</string>
    <string name="make_collections_history">交易历史</string>
    <string name="scan_code_attention">PE的扫描关注我的账号</string>
    <string name="set_main_number">设为主账号</string>
    <string name="import_private_key">导出私钥</string>
    <string name="delet_number">删除账号</string>
    <string name="red_packet_title">发红包</string>
    <string name="get_red_packet">领红包</string>
    <string name="red_packet_already">红包已封口!</string>
    <string name="user_leave_message">恭喜发财,大吉大利</string>
    <string name="go_on_red_pocket">继续发送红包</string>
    <string name="red_packet_status">暂未获取到红包信息</string>
    <string name="redpacket_history">红包记录</string>
    <string name="redpacket_send_title">将红包发送到</string>
    <string name="red_packet_money">总金额</string>
    <string name="input_red_packet_money">填写金额</string>
    <string name="red_packet_number">红包个数</string>
    <string name="input_red_packet_number">填写个数</string>
    <string name="go_transfer_accounts">塞钱进红包</string>
    <string name="scan_code_notice">只能扫描PocketEos合作二维码</string>
    <string name="scan_code_title">扫一扫</string>
    <string name="i_am_title">我是标题</string>
    <string name="title_transfer_accounts">资产转账</string>
    <string name="property_person">收币人</string>
    <string name="input_property_person">填写账号</string>
    <string name="take_property_number">资产数量</string>
    <string name="input_take_property_number">填写数额</string>
    <string name="can_use_property">可用余额</string>
    <string name="sure_go_transfer_accounts">确认转账</string>
    <string name="sure">确定</string>
    <string name="transferaccounts_history">交易历史</string>
    <string name="title_user_center">个人中心</string>
    <string name="photo">头像</string>
    <string name="user_name">名字</string>
    <string name="user_weixin">微信ID</string>
    <string name="user_qq">QQ</string>
    <string name="create_a_wallet">创建钱包</string>
    <string name="slide_to_unlock">滑动销毁钱包</string>
    <string name="slide_to_unlock_account">滑动删除账号</string>
    <string name="slide_to_unlock_notice">将滑块滑动到右侧指定位置内即可解锁</string>
    <string name="unbind_one_qq">您还没有绑定QQ号</string>
    <string name="unbind_two_qq">绑定QQ号可以关联您的资产</string>
    <string name="bind_text">绑定QQ号: 123456789</string>
    <string name="go_unbind">解除绑定</string>
    <string name="title_go_unbind_weixin">解绑微信</string>
    <string name="title_go_unbind_qq">解绑QQ</string>
    <string name="title_go_bind_weixin">绑定微信</string>
    <string name="title_go_bind_qq">绑定QQ</string>
    <string name="go_bind_weixin">绑定微信号</string>
    <string name="go_bind_qq">绑定QQ号</string>
    <string name="unbind_one_weixin">您还没有绑定微信号</string>
    <string name="unbind_two_weixin">绑定微信号可以关联您的资产</string>
    <string name="bind_qq_number">绑定QQ:</string>
    <string name="bind_weixin_number">绑定微信ID:</string>
    <string name="type">type</string>
    <string name="id">id</string>
    <string name="oct">OCT</string>
    <string name="loading">加载中...</string>
    <string name="right_one">保护隐私</string>
    <string name="right_two">远程托管</string>
    <string name="create_number">创建账号</string>
    <string name="import_number">导入账号</string>
    <string name="backup_number">备份钱包</string>
    <string name="reset_password">修改密码</string>
    <string name="main_number">主账号</string>
    <string name="main_number_notice">通过微信，QQ，手机号等获得的数字资产将打入这个账号</string>
    <string name="other_number">其他账号</string>
    <string name="no_data_chart">暂无数据</string>
    <string name="error_parse">数据解析异常,请稍后重试.</string>
    <string name="login_des">安全、隐私、生态丰富</string>
    <string name="mobile_phone">手机号码</string>
    <string name="input_phone">输入手机号码</string>
    <string name="sms_password">动态密码</string>
    <string name="inpue_sms_password">输入动态密码</string>
    <string name="creat">登录</string>
    <string name="creat1">创建钱包</string>
    <string name="other_login">第三方登录</string>
    <string name="from_pocketeos">—————— 来自Pocket  EOS ——————</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="password">密码</string>
    <string name="input_password">输入密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="input_confirm_password">再次确认密码</string>
    <string name="creat_wallet_drsc">1. 请创建pocketEOS钱包 \n2. 随后可在钱包内创建EOS账号 \n3. 密码将用于加密保护EOS账号和个人隐私信息</string>
    <string name="creat_wallet">创建钱包</string>
    <string name="import_wallet">导入钱包</string>
    <string name="vip158415321561">VIP158415321561</string>
    <string name="wallet_manget_title">钱包管理</string>
    <string name="WRITE_EXTERNAL_STORAGE">请开启存储写入权限  创建本地备份</string>
    <string name="SCAN_EXTERNAL_STORAGE">请开启存储读写权限  浏览图库</string>
    <string name="WRITE_STORAGE">写入存储卡</string>
    <string name="READ_STORAGE">读取存储卡</string>
    <string name="dear_user">亲爱的用户</string>
    <string name="close_permisson_toast">您关闭权限申请,如需使用请重新点击.</string>
    <string name="logout_wallet">退出登录</string>
    <string name="_2222cny">= 2222CNY</string>
    <string name="take_out">共转出</string>
    <string name="take_in">共收入</string>
    <string name="alerady_wallet">已有钱包，请点击这里导入</string>
    <string name="import_wallet_toast">请将备份文件文本粘贴到此处</string>
    <string name="creat_account">创建EOS账号</string>
    <string name="creat_account_toast">备份提示：由于区块链的去中心化特性，EOS账号一旦丢失将无法找回。\n创建账号后请根据下页的提示妥善备份，以防账号丢失带来的损失。</string>
    <string name="read_agreement">我已经仔细阅读并同意服务及隐私条款</string>
    <string name="input_account_name">12位字符，由a~z和1~5组成，小写字母开头</string>
    <string name="account_name">账户名称</string>
    <string name="public_look">公开可见</string>
    <string name="alerady_account">已有账号，请点击这里导入</string>
    <string name="import_account">导入账号</string>
    <string name="existing_problem">现有问题</string>
    <string name="past_problems">过往问题</string>
    <string name="pra_backup">私钥备份</string>
    <string name="word_backup">助记词备份</string>
    <string name="total_value">总价值</string>
    <string name="input_time">选择时间</string>
    <string name="end_time">结束时间</string>
    <string name="let_me_make_question">我来提问</string>
    <string name="input_question_title">输入标题</string>
    <string name="question_detail">问题内容</string>
    <string name="add_answer">添加选项</string>
    <string name="question_commit">提交</string>
    <string name="input_answer_details">输入答案选项</string>
    <string name="add_answer_toast">最多添加六个答案选项~</string>
    <string name="suggertion_history">历史记录</string>
    <string name="hint_suggestion_details">想说的话填在这里(140字以内)</string>
    <string name="setting_one">法律条款与隐私政策</string>
    <string name="setting_two">关于Pocket EOS</string>
    <string name="setting_three">清除新闻缓存</string>
    <string name="version_intro">版本介绍</string>
    <string name="check_new_version">检测新版本</string>
    <string name="no_new_version">无新版</string>
    <string name="seach">搜索账号</string>
    <string name="seach_cancel">取消</string>
    <string name="import_private_key_toast">警告:\n私钥用于在钱包中导入该账号;\n掌握私钥即可控制该账号,请妥善保管;</string>
    <string name="dapp_choose_coin_toast">注意: 使用区块链应用有可能产生交易行为</string>
    <string name="choose_account">请选择您将使用的账号</string>
    <string name="i_got_it">我理解区块链应用</string>
    <string name="get_code">获取验证码</string>
    <string name="phone_format">手机格式错误</string>
    <string name="phone_input">请输入手机号</string>
    <string name="code_send_success">验证码已发送,请注意查收~</string>
    <string name="input_pwd_toast">请输入密码~</string>
    <string name="two_pwd">您两次输入的密码不一致~</string>
    <string name="password_error">您的密码输入错误,请核对后再次输入~</string>
    <string name="eos_register_success">注册成功，请妥善保管您的私钥</string>
    <string name="eos_register_toast">请输入包含由1-5,a-z组成的字符,至少为7位</string>
    <string name="camer">照相机</string>
    <string name="open_camer_scan">请开启照相机权限  使用扫一扫功能</string>
    <string name="change_photo">请开启相关权限  更换头像</string>
    <string name="update_app">请开启相关权限  升级APP</string>
    <string name="now_price">现价</string>
    <string name="no_change_name_toast">您未更改钱包名称~</string>
    <string name="empty_list_toast">您还没有关注好友快去关注吧</string>
    <string name="pe_list">PE富豪榜</string>
    <string name="company_list">企业账号</string>
    <string name="xxxwallet">***的钱包</string>
    <string name="no_account">暂无账号</string>
    <string name="make_code">生成二维码</string>
    <string name="input_private_key">请输入私钥</string>
    <string name="private_key">私钥</string>
    <string name="account">账号</string>
    <string name="iniput_account_name">请输入账号</string>
    <string name="import_account_button">导入</string>
    <string name="friend_account">好友账号</string>
    <string name="app_updata">版本更新</string>
    <string name="make_collection_code_top_text">PE扫描二维码，向我转账</string>
    <string name="import_two_account">您已拥有该账号,请勿重复导入</string>
    <string name="import_loading">导入中...</string>
    <string name="import_all_info">请确保信息输入的完整~</string>
    <string name="import_success">导入账号成功</string>
    <string name="account_key_error">账号私钥不匹配,请核对后重新导入~</string>
    <string name="commit_loading">提交中...</string>
    <string name="bind">已绑定</string>
    <string name="delet_account_toast">检测到您钱包下只有一个账号,继续将执行注销钱包操作!请谨慎~</string>
    <string name="url_error">请求链接不存在~</string>
    <string name="social_contact">社交模式</string>
    <string name="input_wallet_name">请输入钱包名称</string>
    <string name="name">名称</string>
    <string name="input_wallet_pwd">请输入钱包密码</string>
    <string name="pwd">密码</string>
    <string name="black_box_wallet_two_pwd">请确认钱包密码</string>
    <string name="next_step">下一步</string>
    <string name="black_box_info">什么是黑匣子模式?</string>
    <string name="agency_account">代理人账号</string>
    <string name="agency_amount">代理数量</string>
    <string name="eos_number">EOS数量</string>
    <string name="sure_agency">确认代理</string>
    <string name="what_about_agency">什么是投票权代理?</string>
</resources>