<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".modules.wallet.createwallet.login.LoginActivity">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_200"
        android:background="@drawable/black_box_login_gradual_change"
        android:padding="@dimen/dimens_20">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/pocket_eos"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens_23"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt1"
            android:layout_marginTop="@dimen/dimens_10"
            android:text="@string/login_des"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens_13"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/social_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:clickable="true"
                android:layout_marginTop="@dimen/dimens_20"
                android:drawablePadding="@dimen/dimens_10"
                android:drawableRight="@mipmap/more"
                android:text="@string/social_contact"
                android:textColor="@color/white"
                android:textSize="@dimen/dimens_14"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginRight="@dimen/dimens_10"
                android:layout_marginTop="@dimen/dimens_10"
                android:src="@mipmap/black_box_login_img"/>
        </FrameLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_20"
        android:gravity="center_vertical"
        android:text="@string/input_wallet_name"
        android:textColor="@color/txt_color"
        android:textSize="@dimen/dimens_14"/>

    <com.oraclechain.pocketeos.view.ClearEditText
        android:id="@+id/black_box_wallet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimens_20"
        android:layout_marginRight="@dimen/dimens_20"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/name"
        android:maxLength="11"
        android:textColor="@color/title_color"
        android:textColorHint="@color/title_color"
        android:textCursorDrawable="@drawable/black_box_edittext_cursor"
        android:textSize="@dimen/dimens_15"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_1"
        android:layout_marginLeft="@dimen/dimens_20"
        android:layout_marginTop="@dimen/dimens_10"
        android:background="@color/line"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_20"
        android:gravity="center_vertical"
        android:text="@string/input_wallet_pwd"
        android:textColor="@color/txt_color"
        android:textSize="@dimen/dimens_14"/>

    <com.oraclechain.pocketeos.view.ClearEditText
        android:id="@+id/black_box_wallet_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimens_20"
        android:layout_marginRight="@dimen/dimens_20"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:textColor="@color/title_color"
        android:textColorHint="@color/title_color"
        android:textCursorDrawable="@drawable/black_box_edittext_cursor"
        android:textSize="@dimen/dimens_15"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_1"
        android:layout_marginLeft="@dimen/dimens_20"
        android:layout_marginTop="@dimen/dimens_10"
        android:background="@color/line"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_20"
        android:gravity="center_vertical"
        android:text="@string/black_box_wallet_two_pwd"
        android:textColor="@color/txt_color"
        android:textSize="@dimen/dimens_14"/>

    <com.oraclechain.pocketeos.view.ClearEditText
        android:id="@+id/black_box_two_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimens_20"
        android:layout_marginRight="@dimen/dimens_20"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:textColor="@color/title_color"
        android:textColorHint="@color/title_color"
        android:textCursorDrawable="@drawable/black_box_edittext_cursor"
        android:textSize="@dimen/dimens_15"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_1"
        android:layout_marginLeft="@dimen/dimens_20"
        android:layout_marginTop="@dimen/dimens_10"
        android:background="@color/line"/>

    <Button
        android:id="@+id/black_box_create_wallet"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_42"
        android:layout_margin="@dimen/dimens_20"
        android:background="@color/black_box_color"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="@dimen/dimens_14"/>

    <TextView
        android:id="@+id/black_box_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/black_box_info"
        android:textColor="@color/black_box_color"
        android:textSize="@dimen/dimens_13"/>
</LinearLayout>
